--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
 main:
     
   - title: "Portfolio"
-    url: /portfolio/
+    url: https://github.com/Richieone13/portfolio
         
   - title: "Blog Posts"
     url: /year-archive/
