link to cv via dropbox

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@ main:
     url: /year-archive/
     
   - title: "CV"
-    url: /cv/
+    url: https://www.dropbox.com/s/0bi8tcremve4ei5/RichieWong_CV.pdf?dl=0
     
   - title: "Personal"
     url: /personal/
