--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 author:
   name             : "Richie Wong"
   avatar           : "profile.png"
-  bio              : "Data Scientist"
+  bio              : "Data Scientist at L&Q"
   location         : "London, UK"
   pubmed           : 
   googlescholar    :
