--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ author:
   instagram        :
   impactstory      : 
   lastfm           :
-  linkedin         : "richieone13"
+  linkedin         : "richieone"
   orcid            : 
   pinterest        :
   soundcloud       :
