--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ social:
 analytics:
   provider               :  "google-universal" # false (default), "google", "google-universal", "custom"
   google:
-  tracking_id          : UA-119334251-1
+  tracking_id          : "UA-119334251-1"
 
 # Site Author
 author:
