--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,8 @@ social:
 analytics:
   provider               :  "google-universal" # false (default), "google", "google-universal", "custom"
   google:
-  tracking_id          : "UA-119334251-1"
+    tracking_id          : "UA-119334251-1"
+    anonymize_ip         : true
 
 # Site Author
 author:
