--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,8 @@ main:
   - title: "Portfolio"
     url: https://github.com/Richieone13/portfolio
         
-  - title: "CV"
-    url: https://www.dropbox.com/s/46ynjkxb41m9jt8/Richie_Wong_CV.pdf?dl=0
+ # - title: "CV"
+  #  url: https://www.dropbox.com/s/46ynjkxb41m9jt8/Richie_Wong_CV.pdf?dl=0
 
   - title: "My Stack"
     url: https://stackshare.io/richieone13/my-stack
