--- a/_config.yml
+++ b/_config.yml
@@ -72,11 +72,11 @@ social:
 
 
 # Analytics
-analytics:
-  provider               :  "google-universal" # false (default), "google", "google-universal", "custom"
-  google:
-    tracking_id          : "UA-119334251-1"
-    anonymize_ip         : true
+#analytics:
+ # provider               :  "google-universal" # false (default), "google", "google-universal", "custom"
+  #google:
+   # tracking_id          : "UA-119334251-1"
+    #anonymize_ip         : true
 
 # Site Author
 author:
