--- a/_config.yml
+++ b/_config.yml
@@ -82,9 +82,9 @@ social:
 author:
   name             : "Richie Wong"
   avatar           : "profile.png"
-  bio              : "Implementing Data Analytics in Products and Business | Provide Solutions using Data"
+  bio              : "Data Profession, currently working at checkout.com as an Analytics Engineer"
   location         : "London, UK"
-  pubmed           : 
+  pubmed           :
   googlescholar    :
   email            :
   researchgate     :
@@ -99,13 +99,13 @@ author:
   google_plus      :
   keybase          :
   instagram        :
-  impactstory      : 
+  impactstory      :
   lastfm           :
   linkedin         : "richieone"
-  orcid            : 
+  orcid            :
   pinterest        :
   soundcloud       :
-  stackoverflow    : 
+  stackoverflow    :
   steam            :
   tumblr           :
   twitter          : "richieone13"
